crates/alder-can/src/snapshots/alder_can__module__tests__let_mutual_recursion_values_error.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        a = b\n        b = a\n    in\n    a\n"
---
[
    RecursiveLet {
        name: Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 9,
                },
                end: Position {
                    line: 5,
                    column: 10,
                },
            },
            value: "a",
        },
        others: [
            "b",
        ],
    },
]
