crates/alder-can/src/snapshots/alder_can__module__tests__list_literal.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = [ 1, 2, 3 ]\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 16,
                    },
                },
                value: List(
                    [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 7,
                                },
                                end: Position {
                                    line: 3,
                                    column: 8,
                                },
                            },
                            value: Int(
                                1,
                            ),
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 10,
                                },
                                end: Position {
                                    line: 3,
                                    column: 11,
                                },
                            },
                            value: Int(
                                2,
                            ),
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 13,
                                },
                                end: Position {
                                    line: 3,
                                    column: 14,
                                },
                            },
                            value: Int(
                                3,
                            ),
                        },
                    ],
                ),
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
