crates/alder-can/src/snapshots/alder_can__module__tests__local_record_alias_ctor.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Point a = { x : a, y : a }\n\np = Point\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 2,
                    },
                },
                value: "p",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 5,
                    },
                    end: Position {
                        line: 5,
                        column: 10,
                    },
                },
                value: VarConstructor {
                    options: Normal,
                    reference: ConstructorName {
                        home: ModuleName {
                            package: None,
                            name: "Main",
                        },
                        union: "Point",
                        name: "Point",
                    },
                    index: 0,
                    annotation: Annotation {
                        free_vars: [
                            "a",
                        ],
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Lambda {
                                from: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 28,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 29,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                                to: Located {
                                    region: Region {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                    },
                                    value: Lambda {
                                        from: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 3,
                                                    column: 35,
                                                },
                                                end: Position {
                                                    line: 3,
                                                    column: 36,
                                                },
                                            },
                                            value: Var(
                                                "a",
                                            ),
                                        },
                                        to: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                            },
                                            value: Alias {
                                                reference: QualifiedName {
                                                    home: ModuleName {
                                                        package: None,
                                                        name: "Main",
                                                    },
                                                    name: "Point",
                                                },
                                                arguments: [
                                                    AliasArgument {
                                                        name: "a",
                                                        typ: Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 0,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 0,
                                                                },
                                                            },
                                                            value: Var(
                                                                "a",
                                                            ),
                                                        },
                                                    },
                                                ],
                                                target: Filled(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 3,
                                                                column: 22,
                                                            },
                                                            end: Position {
                                                                line: 3,
                                                                column: 38,
                                                            },
                                                        },
                                                        value: Record {
                                                            fields: [
                                                                FieldType {
                                                                    index: 0,
                                                                    field: "x",
                                                                    typ: Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 3,
                                                                                column: 28,
                                                                            },
                                                                            end: Position {
                                                                                line: 3,
                                                                                column: 29,
                                                                            },
                                                                        },
                                                                        value: Var(
                                                                            "a",
                                                                        ),
                                                                    },
                                                                },
                                                                FieldType {
                                                                    index: 1,
                                                                    field: "y",
                                                                    typ: Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 3,
                                                                                column: 35,
                                                                            },
                                                                            end: Position {
                                                                                line: 3,
                                                                                column: 36,
                                                                            },
                                                                        },
                                                                        value: Var(
                                                                            "a",
                                                                        ),
                                                                    },
                                                                },
                                                            ],
                                                            ext: None,
                                                        },
                                                    },
                                                ),
                                            },
                                        },
                                    },
                                },
                            },
                        },
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 5,
                    column: 1,
                },
            },
            value: Alias {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 12,
                        },
                        end: Position {
                            line: 3,
                            column: 17,
                        },
                    },
                    value: "Point",
                },
                parameters: [
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 22,
                        },
                        end: Position {
                            line: 3,
                            column: 38,
                        },
                    },
                    value: Record {
                        fields: [
                            FieldType {
                                index: 0,
                                field: "x",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 28,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 29,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            },
                            FieldType {
                                index: 1,
                                field: "y",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 35,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 36,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            },
                        ],
                        ext: None,
                    },
                },
            },
        },
    ],
    binops: [],
}
